--- a/devsearch/templates/projects.html
+++ b/devsearch/templates/projects.html
@@ -1,3 +1,8 @@
-{% include 'navbar.html' %}
+{% extends 'main.html' %}
+
+
+{% block content %}
 
 <h1>Projects template</h1>
+    
+{% endblock content %}
