--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -3,11 +3,26 @@
 
 {% block content %}
 
-<h1>Projects template</h1>
+<h1>Projects</h1>
 
-{% for project in projects %}
-    <p><a href="{% url 'project' project.id %}">{{ project.title }}</a></p>
-{% endfor %}
-    
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Positive Votes</th>
+        <th>Votes</th>
+        <th></th>
+    </tr>
+    {% for project in projects %}
+        <tr>
+            <td>{{ project.id }}</td>
+            <td>{{ project.title }}</td>
+            <td>{{ project.vote_ratio }}%</td>
+            <td>{{ project.vote_total }}</td>
+            <td>{{ project.created }}</td>
+            <td><a href="{% url 'project' project.id %}">View</a></td>
+        </tr>
+    {% endfor %}
+</table>    
     
 {% endblock content %}
