--- a/devsearch/projects/templates/projects/project_form.html
+++ b/devsearch/projects/templates/projects/project_form.html
@@ -8,6 +8,11 @@
 <form action="" method="POST">
     {% csrf_token %}
     
+    {% for field in form %}
+        {{ field.label }}
+        {{ field }}
+    {% endfor %}
+        
     <input type="submit">
 </form>
 {% endblock content %}
