--- a/devsearch/projects/templates/projects/project_form.html
+++ b/devsearch/projects/templates/projects/project_form.html
@@ -8,10 +8,7 @@
 <form action="" method="POST">
     {% csrf_token %}
     
-    {% for field in form %}
-        {{ field.label }}
-        {{ field }}
-    {% endfor %}
+    {{ form.as_p }}
         
     <input type="submit">
 </form>
