--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -11,6 +11,7 @@
         <th>Positive Votes</th>
         <th>Votes</th>
         <th></th>
+        <th></th>
     </tr>
     {% for project in projects %}
         <tr>
@@ -19,6 +20,7 @@
             <td>{{ project.vote_total }}</td>
             <td>{{ project.created }}</td>
             <td><a href="{% url 'project' project.id %}">View</a></td>
+            <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
         </tr>
     {% endfor %}
 </table>    
