--- a/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/projects/templates/projects/projects.html
@@ -3,19 +3,6 @@
 
 {% block content %}
 
-<table>
-
-    {% for project in projects %}
-    <tr>
-        <td><a href="{% url 'project' project.id %}">View</a></td>
-        <td><a href="{% url 'update-project' project.id %}">Edit</a></td>
-        <td><a href="{% url 'delete-project' project.id %}">Delete</a></td>
-    </tr>
-    {% endfor %}
-</table>
-
-
-
 <!-- Main Section -->
 <main class="projects">
     <section class="hero-section text-center">
@@ -54,7 +41,7 @@
                                 </p>
                                 <p class="project--rating">
                                     <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Positive
-                                    Feedback ({{ project.vote_total }} Votes)
+                                    Feedback ({{ project.vote_total }} Vote{{ project.vote_total | pluralize:"s" }})
                                 </p>
                                 <div class="project__tags">
                                     {% for tag in project.tags.all %}
