--- a/devsearch/users/templates/users/profiles.html
+++ b/devsearch/users/templates/users/profiles.html
@@ -40,7 +40,7 @@
                                     alt="image" />
                                 <div class="dev__meta">
                                     <h3>{{ profile.name }}</h3>
-                                    <h5>{{ profile.short_intro }}</h5>
+                                    <h5>{{ profile.short_intro | slice:"60" }}</h5>
                                 </div>
                             </div>
                             <p class="dev__info">
@@ -48,7 +48,7 @@
                             </p>
                             <div class="dev__skills">
                                 
-                                {% for skill in profile.skill_set.all %}    
+                                {% for skill in profile.skill_set.all|slice:"5" %}    
                                 <span class="tag tag--pill tag--main">
                                     <small>{{ skill }}</small>
                                 </span>
