--- a/devsearch/users/templates/users/user_profile.html
+++ b/devsearch/users/templates/users/user_profile.html
@@ -105,29 +105,33 @@
                     <h3 class="devInfo__title">Projects</h3>
                     <div class="grid grid--two">
 
+                        {% for project in profile.project_set.all %}    
                         <div class="column">
                             <div class="card project">
-                                <a href="single-project.html" class="project">
-                                    <img class="project__thumbnail" src="images/project-b.png"
+                                <a href="{% url 'project' project.id %}" class="project">
+                                    <img class="project__thumbnail" src="{{ project.featured_image.url }}"
                                         alt="project thumbnail" />
                                     <div class="card__body">
-                                        <h3 class="project__title">DevSearch UI Design</h3>
-                                        <p><a class="project__author" href="profile.html">By Shahriar P. Shuvo</a></p>
+                                        <h3 class="project__title">{{ project.title }}</h3>
+                                        <p><a class="project__author" href="profile.html">By {{ project.owner.name }}</a></p>
                                         <p class="project--rating">
-                                            <span style="font-weight: bold;">92%</span> Postitive
-                                            Feedback (62 Votes)
+                                            <span style="font-weight: bold;">{{ project.vote_ratio }}%</span> Postitive
+                                            Feedback ({{ project.vote_total }} Vote{{ project.vote_total | pluralize:"s" }})
                                         </p>
                                         <div class="project__tags">
-
+                                             
+                                            {% for tag in project.tags.all %}    
                                             <span class="tag tag--pill tag--main">
-                                                <small>NextJS</small>
+                                                <small>{{ tag }}</small>
                                             </span>
-                                            
+                                            {% endfor %}
+
                                         </div>
                                     </div>
                                 </a>
                             </div>
                         </div>
+                        {% endfor %}
 
                     </div>
                 </div>
