style: add if statement to render login register page

--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -4,11 +4,19 @@
 
 {% block content %}
 
-<form action="{% url 'login' %}" method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password" placeholder="Enter password">
-    <input type="submit" value="Login">
-</form>
+
+{% if page == 'register' %}
+    <h1>Register user</h1>
+    <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+{% else %}
+    <form action="{% url 'login' %}" method="POST">
+        {% csrf_token %}
+        <input type="text" name="username" placeholder="Username">
+        <input type="password" name="password" placeholder="Enter password">
+        <input type="submit" value="Login">
+
+        <p>Do'nt have an account? <a href="{% url 'register' %}">Sign Up</a></p>
+    </form>
+{% endif %}
 
 {% endblock content %}
