--- a/devsearch/users/templates/users/login_register.html
+++ b/devsearch/users/templates/users/login_register.html
@@ -7,6 +7,13 @@
 
 {% if page == 'register' %}
     <h1>Register user</h1>
+
+    <form action="{% url 'register' %}" method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Register User">
+    </form>
+
     <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 {% else %}
     <form action="{% url 'login' %}" method="POST">
