--- a/devsearch/users/templates/users/profile_form.html
+++ b/devsearch/users/templates/users/profile_form.html
@@ -5,8 +5,9 @@
 {% block content %}
 <h1>Edit account</h1>
 
-<form action="{% url 'edit-account' %}" method="POST">
+<form action="{% url 'edit-account' %}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
+    {{ form.as_p }}
     <input type="submit" value="Submit">
 </form>
 
