--- a/devsearch/users/templates/users/skill_form.html
+++ b/devsearch/users/templates/users/skill_form.html
@@ -9,6 +9,13 @@
 <form action="" method="POST">
     {% csrf_token %}
 
+    
+    {% for field in form %}
+    {{ field.label }}
+    {{ field }}
+    {% endfor %}
+        
+
     <input type="submit" value="Submit" >
 </form>
 
