--- a/devsearch/templates/delete_template.html
+++ b/devsearch/templates/delete_template.html
@@ -3,15 +3,24 @@
 
 {% block content %}
 
-<form action="" method="POST">
-    {% csrf_token %}
+<!-- Main Section -->
+<main class="formPage my-xl">
+    <div class="content-box">
+        <div class="formWrapper">
 
-    <p>Are you sure you want to delete "{{ object }}"?</p>
-    <a href="{% url 'projects' %}">
-        Go Back
-    </a>
-    <input type="submit" value="Confirm">
-</form>
+            <br>
+
+            <form class="form" method="POST" action="">
+                {% csrf_token %}
+                <p>Are you sure you want to delete "{{ object }}"?</p>
+
+                <a class="btn btn--sub btn--lg  my-md" href="{{ request.GET.next }}">Go Back</a>
+
+                <input class="btn btn--sub btn--lg  my-md" type="submit" value="Confirm" />
+            </form>
+        </div>
+    </div>
+</main>
 
 {% endblock content %}
     
