--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -68,12 +68,12 @@
                                 <div class="comment__details">
                                     <a href="{% url 'user-profile' review.owner.id %}" class="comment__author">{{ review.owner.name }}</a>
                                     <p class="comment__info">
-                                        {{ review.body }}
+                                        {{ review.body | linebreaksbr }}
                                     </p>
                                 </div>
                             </div>
                         {% endif %}
-                        
+
                         {% endfor %}
 
                     </div>
