--- a/devsearch/projects/templates/projects/project_form.html
+++ b/devsearch/projects/templates/projects/project_form.html
@@ -8,7 +8,7 @@
 <main class="formPage my-xl">
     <div class="content-box">
         <div class="formWrapper">
-            <a class="backButton" href="#"><i class="im im-angle-left"></i></a>
+            <a class="backButton" href="{% url 'account' %}"><i class="im im-angle-left"></i></a>
             <br>
 
             <form class="form" method="POST" enctype="multipart/form-data">
@@ -22,6 +22,12 @@
                     {{ field }}
                 </div>
                 {% endfor %}
+
+                <div class="form__field">
+                    <label for="formInput#text">Tags</label>
+
+                    <textarea class="input" name="new_tags" placeholder="Add tags..."></textarea>
+                </div>
 
                 <input class="btn btn--sub btn--lg  my-md" type="submit" value="Submit" />
             </form>
