style: add link to the demo/source page

--- a/devsearch/projects/templates/projects/single-project.html
+++ b/devsearch/projects/templates/projects/single-project.html
@@ -19,13 +19,13 @@
 
                 
                 {% if project.source_link %}    
-                <a class="singleProject__liveLink" href="#" target="_blank">
+                <a class="singleProject__liveLink" href="{{ project.source_link }}" target="_blank">
                     <i class="im im-external-link"></i>Source Code
                 </a>
                 {% endif %}
 
                 {% if project.demo_link %}    
-                <a class="singleProject__liveLink" href="#" target="_blank">
+                <a class="singleProject__liveLink" href="{{ project.demo_link }}" target="_blank">
                     <i class="im im-external-link"></i>Live Demo
                 </a>
                 {% endif %}
